@@ -6,6 +6,7 @@
 * LuxCoreUI "Fill kernel cache" menu option now pre-compile all possible GPU kernels.
 * LuxCore API KernelCacheFill() is now available for Python
 * New 2-levels Env. Light Visibility Cache (ELVC)
+* Added the support for a new ".sharpness" (default value 0.1, range [0.0, 1.0]) Intel OIDN parameter to blend original and denoised output
 
 ### Fixed Bugs
 
